Enough to get to the title screen of Kings Quest by interpreting Logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "stdio.h": "c",
         "stdint.h": "c",
         "string.h": "c",
-        "gfx.h": "c"
+        "gfx.h": "c",
+        "view.h": "c"
     }
 }
