Implement text parser Several sprite animation commands now work Fix severe performance issue by MAPping the graphics screen into 16-bit space Message boxes can be created

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,7 @@
             "name": "(MEGA65) Launch",
             "type": "cppvsdbg",
             "request": "launch",
+            "preLaunchTask": "senddisk",
             "program": "C:\\CommandLineApps\\etherload.exe",
             "args": ["-r", "-m", "agi.d81", "-5", "--ntsc", "agi.prg"],
             "stopAtEntry": false,
