File save/load are on dialogs! Fixed the ending message when you win the game. Removed some debugging code that was out of date. Cleaned up some warnings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "stdint.h": "c",
         "string.h": "c",
         "gfx.h": "c",
-        "view.h": "c"
+        "view.h": "c",
+        "memmanage.h": "c"
     },
     "C_Cpp.default.compilerPath": ""
 }
