Keyboard access to several functions Inventory viewer Handle loading scripts for a single invocation GPL license agreement Fix to the duck command, don't render the slot past the end of the loop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "string.h": "c",
         "gfx.h": "c",
         "view.h": "c",
-        "memmanage.h": "c"
+        "memmanage.h": "c",
+        "stdbool.h": "c"
     },
     "C_Cpp.default.compilerPath": ""
 }
