Support the MEGA65 splash screen Fix up palette and video settings after splash screen Fix a bug in file access where SETBNK was not called

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,5 +27,17 @@
             "environment": [],
             "console": "internalConsole"
         },
+        {
+            "name": "(MEGA65) Upload",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "preLaunchTask": "senddisk",
+            "program": "C:\\CommandLineApps\\etherload.exe",
+            "args": ["-m", "agi.d81", "-5", "--ntsc"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceRoot}",
+            "environment": [],
+            "console": "internalConsole"
+        },
    ]
 }
