Create a python script to build an actual game disk

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "make -k agi.d81",
+            "command": "make -k agisystem",
             "options": {
                 "cwd": "${workspaceRoot}"
             },
