--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,5 +39,12 @@
             "environment": [],
             "console": "internalConsole"
         },
-   ]
+        {
+            "name": "Python Debugger: builddisk.py",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/builddisk.py",
+            "args": ["kq1", "--verbose", "-a"],
+        }
+    ]
 }
