Fix the disk builder script to work from the actual GOG directory, and to filter out all files not needed by this interpreter.
Assume 32k of color ram, fixes an error on XEMU.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,7 +44,7 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/builddisk.py",
-            "args": ["kq1", "--verbose", "-a"],
+            "args": ["d:\\gog\\kings quest", "--verbose", "-a"],
         }
     ]
 }
